# lcovissue

./: README.md  build.sh
package_a/: CMakeLists.txt  package.xml
package_a/include/package_a/: package_a.h
package_a/test/: CMakeLists.txt  test_PackageA.cpp
package_b/: CMakeLists.txt  package.xml
package_b/src/: main.cpp
package_b/test/: CMakeLists.txt  test_PackageB.cpp
